--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -3,12 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.SearchActivity">
 
+    <item android:id="@+id/action_search"
+        android:orderInCategory="5"
+        android:title="Search"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+
     <item
         android:id="@+id/filter"
         app:showAsAction="ifRoom"
         android:icon="@drawable/filter_icon"
         android:title="Filter">
     </item>
+
+    <!--<item android:id="@+id/action_search"-->
+        <!--android:orderInCategory="5"-->
+        <!--android:title="Search"-->
+        <!--android:icon="@android:drawable/ic_menu_search"-->
+        <!--app:showAsAction="ifRoom|collapseActionView"-->
+        <!--app:actionViewClass="android.support.v7.widget.SearchView"/>-->
+
+
 
     <!--<item-->
         <!--android:id="@+id/action_settings"-->
