--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -21,12 +21,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true" />
 
-    <!--<GridView-->
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/gvResults"-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/gvResults"-->
         <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_below="@+id/btnSearch"-->
-        <!--android:numColumns="4" />-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--/>-->
 
 </RelativeLayout>
